@@ -2,17 +2,16 @@ package no.nav.k9.sak.mottak.dokumentmottak;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class FileToStringUtil {
-    public FileToStringUtil() {
+    private FileToStringUtil() {
     }
 
-    public String readFile(String filename) throws URISyntaxException, IOException {
-        Path path = Paths.get(getClass().getClassLoader().getResource(filename).toURI());
-        return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+    public static String readFile(String filename) throws URISyntaxException, IOException {
+        Path path = Paths.get(FileToStringUtil.class.getClassLoader().getResource(filename).toURI());
+        return Files.readString(path);
     }
 }
